--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -5,26 +5,28 @@ color: white
 fa-icon: check-square-o
 ---
 
-#### Basically
+<form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
+  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+  <input type='hidden' name='redirect_to' value='http://google.com'/>
+  <div class="form-group">
+    <label for="FullName" class="col-sm-2 control-label">
+    Full Name</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="FullName" placeholder="Your Name" name="FullName:">
+    </div>
+  </div>
 
-# this theme rocks.
-
-Got some *killer app*, some *neat project*, a cool portfolio? Make an easy single-page site to show it all off. SinglePaged uses jekyll niceties to make a ***polished, modular, and beautiful* single page site**.
-
-Oh-- go see [some examples](https://github.com/t413/SinglePaged#fancy-jekyll-powered-single-page-site)!
-
-- Each vertical section is a markdown file in **_posts/** directory.
-  * They're sorted by 'date'. (we don't use date anywhere, it only sorts)
-- Each vertical section sets it's own **color**, **header icon** (or image), **title**, and easy-to-write markdown body.
-- Only **two things** to edit:
-  1. Edit `_config.yml` to set the site title, description, etc
-  2. Add `_posts/*.md` to make each vertical section. Copy some examples and add the sections from your README.md for a fast start!
-- Easy adding of **SEO terms**, **favicon** & such, and **google analytics token**.
-
-Sound good? Let's go!
-
-There are three way to get started: (links jump to that section)
-
-1. Make a [**user homepage**](#setup-as-user-homepage) (or organization)
-2. Make a [**standalone project**](#setup-as-standalone-project-page) page
-3. Make a [site under an **existing project**](#setup-inside-existing-project)
+   <div class="form-group">
+    <label for="MobileNo" class="col-sm-2 control-label">
+    Mobile No</label>
+    <div class="col-sm-10">
+      <input type="number" class="form-control" id="MobileNo" placeholder="Your Name" name="Mobile:">
+    </div>
+  </div>
+  
+   <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Sign in</button>
+    </div>
+  </div>
+</form>
