--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -1,63 +1,71 @@
 ---
-title: "usage"
+title: "Send Link"
 bg: '#63BD2F'
 color: white
 fa-icon: plug
 ---
 
-Alright, you've got a clean copy and are ready to push some schmancy pages for the world to ogle at.
 
-- Edit `_config.yml` to change your title, keywords, and description.
-- Create a new file in `_posts/` called `2014-01-01-intro.md`
-  Edit it, and add:
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
+        <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+        <input type='hidden' name='redirect_to' value='https://www.dropbox.com/request/7lG33UjGl1Vb4fWtSqE9'/>
+        <div class="row">
+            <div class="form-group form-group-lg">
+              <label for="FullName" class="col-sm-3 control-label check">
+              <span class="cus-font">Paste Link</span></label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="FullName" placeholder="Valid link" name="Link:">
+                  <span class="help-text">Paste the valid link
+                  </span>
+                </div>
+            </div>
+          </div>
+	
 
-{% highlight text linenos=table %}
----
-title: "home"
-bg: white     #defined in _config.yml, can use html color like '#010101'
-color: black  #text color
-style: center
----
+          <div class="row">
+            <div class="form-group form-group-lg">
+              <label for="FullName" class="col-sm-3 control-label check">
+              <span class="cus-font">Full Name</span></label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="FullName" placeholder="Your Name" name="FullName:">
+                  <span class="help-text">Your full name
+                  </span>
+                </div>
+            </div>
+          </div>
 
-# Example headline!
-and so on..
-{% endhighlight %}
+    <div class="row remove-margin">
+       <div class="form-group form-group-lg">
+        <label for="MobileNo" class="col-sm-3 control-label"> Mobile No</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" id="MobileNo" placeholder="98" name="Mobile:">
+          <span class="help-text">Your valid mobile number. e.g. 9808233701</span>
+        </div>
+      </div>
+    </div>
 
-- Create a second post called `2014-01-02-art.md` with an divider image this time:
-
-{% highlight text linenos=table %}
----
-title: "Art"
-bg: turquoise  #defined in _config.yml, can use html color like '#0fbfcf'
-color: white   #text color
-fa-icon: paint-brush
----
-
-#### A new section- oh the humanity!
-{% endhighlight %}
-
-**Note:** That part `fa-icon: paint-brush` will use a font-awesome icon of [paint-brush](http://fortawesome.github.io/Font-Awesome/icon/paint-brush/). You can use any icon from this [font-awesome icon directory](http://fortawesome.github.io/Font-Awesome/icons/).
-
-- install Jekyll with `sudo gem install github-pages`
-- run `jekyll serve -w`
-  - visit [localhost:4000](http://localhost:4000) to see a live locally served preview.
-- Push changes and see them live!
-
-
-
-
-## **Changing your colors**
-{: style="margin-top:100px;"}
-
-- In each post file you can define `bg: mycolor` and `color: myothercolor` to change the background and text colors for that section.
-- **mycolor** can be a quoted html color like `'#0fbfcf'` or a key to a special color defined in **_config.yml** under 'colors'.
-  - **Note:** Changes to _config.yml require a manual restart to your local server with `^C` and `jekyll serve -w`.
-
-Nifty, right!
-
-
-
-### Also see **README.md** [*on github!*](https://github.com/t413/SinglePaged#usage)
-{: style="margin-top:100px;"}
+    <div class="row">
+       <div class="form-group form-group-lg">
+        <label for="MobileNo" class="col-sm-3 control-label">Email</label>
+        <div class="col-sm-9">
+          <input type="emaild" class="form-control" id="MobileNo" placeholder="98" name="Email:">
+          <span class="help-text">Your email address. e.g. nep3dprint@gmail.com</span>
+        </div>
+      </div>
+    </div>
 
 
+    <div class="row">
+       <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9 ">
+          <button type="submit" class="btn btn-default">Send</button>
+        </div>
+      </div>
+    </div>
+  </form>
+  </div>
+</div>
+</div>
