--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -1,32 +1,58 @@
 ---
-title: "Why"
+title: "Upload File"
 bg: blue
 color: white
 fa-icon: check-square-o
 ---
 
-<form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
-  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-  <input type='hidden' name='redirect_to' value='http://google.com'/>
-  <div class="form-group">
-    <label for="FullName" class="col-sm-2 control-label">
-    Full Name</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="FullName" placeholder="Your Name" name="FullName:">
-    </div>
-  </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
+        <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+        <input type='hidden' name='redirect_to' value='https://www.dropbox.com/request/7lG33UjGl1Vb4fWtSqE9'/>
+          <div class="row">
+            <div class="form-group form-group-lg">
+              <label for="FullName" class="col-sm-3 control-label check">
+              <span class="cus-font">Full Name</span></label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="FullName" placeholder="Your Name" name="FullName:">
+                  <span class="help-text">Your full name
+                  </span>
+                </div>
+            </div>
+          </div>
 
-   <div class="form-group">
-    <label for="MobileNo" class="col-sm-2 control-label">
-    Mobile No</label>
-    <div class="col-sm-10">
-      <input type="number" class="form-control" id="MobileNo" placeholder="Your Name" name="Mobile:">
+    <div class="row remove-margin">
+       <div class="form-group form-group-lg">
+        <label for="MobileNo" class="col-sm-3 control-label"> Mobile No</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" id="MobileNo" placeholder="98" name="Mobile:">
+          <span class="help-text">Your valid mobile number</span>
+        </div>
+      </div>
     </div>
-  </div>
-  
-   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Sign in</button>
+
+    <div class="row">
+       <div class="form-group form-group-lg">
+        <label for="MobileNo" class="col-sm-3 control-label"> Retype Mobile</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" id="MobileNo" placeholder="98" name="Mobile:">
+          <span class="help-text">Please Re-type your valid mobile number again</span>
+        </div>
+      </div>
     </div>
+
+
+    <div class="row">
+       <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9 ">
+          <button type="submit" class="btn btn-default">Proceed</button>
+        </div>
+      </div>
+    </div>
+  </form>
   </div>
-</form>
+</div>
+</div>
+
