Help section added

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -1,13 +1,19 @@
 ---
-title: "Get 3d files
+title: "get 3dfiles"
 bg: orange
 color: black
 fa-icon: toggle-on
 ---
 
 <style>
-
+  
 
 </style>
-<div class="screw"> check </div>
+
+<div>
+	<p> Looking for free 3d printer files?  There are thousand of free 3d printer files availiable right now. 
+
+	We've listed some top website to look for. </p>
+
+</div>
 
