--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -6,17 +6,19 @@ fa-icon: check-square-o
 ---
 
 <div class="container">
+  
   <div class="row">
     <div class="col-md-6">
+    
       <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
         <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
         <input type='hidden' name='redirect_to' value='https://www.dropbox.com/request/7lG33UjGl1Vb4fWtSqE9'/>
           <div class="row">
             <div class="form-group form-group-lg">
-              <label for="FullName" class="col-sm-3 control-label check">
+              <label for="FullName" class="col-sm-3 control-label">
               <span class="cus-font">Full Name</span></label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" id="FullName" placeholder="Your Name" name="FullName:">
+                  <input type="text" class="form-control" id="FullName" name="FullName:">
                   <span class="help-text">Your full name
                   </span>
                 </div>
@@ -27,7 +29,7 @@ fa-icon: check-square-o
        <div class="form-group form-group-lg">
         <label for="MobileNo" class="col-sm-3 control-label"> Mobile No</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" id="MobileNo" placeholder="98" name="Mobile:">
+          <input type="text" class="form-control" id="MobileNo" name="Mobile:">
           <span class="help-text">Your valid mobile number</span>
         </div>
       </div>
@@ -35,24 +37,80 @@ fa-icon: check-square-o
 
     <div class="row">
        <div class="form-group form-group-lg">
-        <label for="MobileNo" class="col-sm-3 control-label"> Retype Mobile</label>
+        <label for="Email" class="col-sm-3 control-label"> Email</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" id="MobileNo" placeholder="98" name="Mobile:">
-          <span class="help-text">Please Re-type your valid mobile number again</span>
+          <input type="email" class="form-control" id="MobileNo" name="Email:">
+          <span class="help-text">Your email address. e.g. nep3dprint@gmail.com</span>
         </div>
       </div>
     </div>
 
-
     <div class="row">
        <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-9 ">
+        <div class="col-sm-offset-3 col-sm-9">
           <button type="submit" class="btn btn-default">Proceed</button>
         </div>
       </div>
     </div>
+    <div class="row">
+      <ul class="info-display">
+        <li>Step 1: Fill up the form and click proceed.</li>
+        <li>Step 2: Upload dialogue box will open.</li>
+        <li>Step 3: Upload File in our Dropbox.</li>
+        <li>Step 4: You'll be contacted shortly with model details and pricing.</li>
+      </ul>
+    </div>
+
   </form>
   </div>
-</div>
+
+
+  <div class="col-md-6 hidden-xs">
+    <div class="help-holder pos-main-help"> 
+      <table>
+          <tr>
+            <th>
+             <div class="help-question">
+              <i class="fa fa-question"></i>
+              </div>
+            </th>
+            <td><p class="pos-main-text">Instruction<br>
+                Direct Contact</p>
+            </td>
+          </tr>
+          <tr>
+              <td>
+                <p class="need-help">Need Help?</p>
+              </td>          
+          </tr>
+      </table>
+    </div> 
+  </div>
+
+  <!-- Repeat of above code except modification of css of help section to fit for smaller screen -->
+
+  <div class="col-md-6 visible-xs">
+    <div class="help-holder pos-main-help-small "> 
+      <table>
+          <tr>
+            <th>
+             <div class="help-question-small">
+              <i class="fa fa-question"></i>
+              </div>
+            </th>
+            <td><p class="pos-main-text-small">Instruction<br>
+                Direct Contact</p>
+            </td>
+          </tr>
+          <tr>
+              <td>
+                <p class="need-help-small">Need Help?</p>
+              </td>          
+          </tr>
+      </table>
+    </div> 
+    
+  </div>
+
 </div>
 
