--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -48,7 +48,7 @@ fa-icon: check-square-o
     <div class="row">
        <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9">
-          <button type="submit" class="btn btn-default">Proceed</button>
+          <button type="submit" class="btn btn-lg btn-log">Proceed</button>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@ fa-icon: check-square-o
       <ul class="info-display">
         <li>Step 1: Fill up the form and click proceed.</li>
         <li>Step 2: Upload dialogue box will open.</li>
-        <li>Step 3: Upload File in our Dropbox.</li>
+        <li>Step 3: Upload File in our Dropbox. We accept only <strong>.STL</strong> and <strong>.OBJ</strong> file format.</li>
         <li>Step 4: You'll be contacted shortly with model details and pricing.</li>
       </ul>
     </div>
