--- a/_posts/2000-01-06-updating.md
+++ b/_posts/2000-01-06-updating.md
@@ -1,20 +1,79 @@
 ---
-title: "updating"
+title: "Contact"
 bg: purple
 color: white
 fa-icon: cloud-upload
 ---
 
-## Updating
+<div class="container">
+  
+  <div class="row">
+    <div class="col-md-6">
+    
+      
+  </div>
 
-So you've got a copy running and there's some new update? Let's update!
 
-1. Checkout your github-pages branch
-  - `git checkout gh-pages` for a standalone or existing page
-  - `git checkout master` for a *username.github.io* page
-2. run `git remote | grep -q "singlepage" || git remote add -t publish singlepage https://github.com/t413/SinglePaged.git` to be sure you have access to this repository (you can run this command at any time).
-2. `git fetch singlepage` to fetch-in-place new changes.
-3. Update to the new base (using merge)
-    1. `git merge singlepage/publish`
-4. You can alternatively update using rebase. This *rewrites history* (**bad**), but it is cleaner.
-    1. `git rebase singlepage/publish`
+  <div class="col-md-6 hidden-xs">
+    
+    <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
+        <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+       <input type='hidden' name='redirect_to' value='#'/>
+
+        <div class="row">
+        <div class="form-group form-group-lg">
+          <label for="FullName" class="col-sm-3 control-label">
+          <span class="cus-font">Message:</span></label>
+            <div class="col-sm-9">
+              <textarea class="form-control" rows="5" id="MessageDet" name="Message:"></textarea>
+              <span class="help-text">
+              </span>
+            </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="form-group form-group-lg">
+          <label for="FullName" class="col-sm-3 control-label">
+          <span class="cus-font">Full Name</span></label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" id="UserFullName" name="FullName:">
+              <span class="help-text">Your full name
+              </span>
+            </div>
+        </div>
+      </div>
+
+    <div class="row remove-margin">
+       <div class="form-group form-group-lg">
+        <label for="MobileNo" class="col-sm-3 control-label"> Mobile No</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" id="MobileNo" name="Mobile:">
+          <span class="help-text">Your valid mobile number</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+       <div class="form-group form-group-lg">
+        <label for="Email" class="col-sm-3 control-label"> Email</label>
+        <div class="col-sm-9">
+          <input type="email" class="form-control" id="UserEmail" name="Email:">
+          <span class="help-text">Your email address. e.g. nep3dprint@gmail.com</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+       <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9">
+          <button type="submit" class="btn btn-lg btn-log">Send</button>
+        </div>
+      </div>
+    </div>
+   
+  </form>
+  </div>
+
+</div>
+
