--- a/_posts/2000-01-07-video.md
+++ b/_posts/2000-01-07-video.md
@@ -1,6 +1,21 @@
 ---
-title: "video"
+title: "Address"
 bg: turquoise
 color: white
 fa-icon: film
 ---
+
+<div class="container">
+	<div class="row">
+		<div class="col-sm-offset-4 col-sm-4">
+			<h1> Office location: <br>
+			<br> Hattiban, Lalitpur, Nepal</h1>
+			<h2> <em>Near Samiti Bhawan</em></h2>
+			<br>
+			<div class="contact-help">
+				<i class="fa fa-question"></i>
+			</div>
+			<h3 class="contact-text">Need assistant to get here? <br>Contact Us.</h3>
+		</div>
+	</div>
+</div>
