--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -61,7 +61,7 @@ fa-icon: plug
     <div class="row">
        <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9">
-          <button type="submit" class="btn btn-default">Send</button>
+          <button type="submit" class="btn btn-lg btn-log">Send</button>
         </div>
       </div>
     </div>
