--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -10,9 +10,9 @@ fa-icon: check-square-o
   <div class="row">
     <div class="col-md-6">
     
-      <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
-        <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-        <input type='hidden' name='redirect_to' value='https://www.dropbox.com/request/7lG33UjGl1Vb4fWtSqE9'/>
+      <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal" onsubmit="return formSub()">
+        <!-- the redirect_to is optional, the form will redirect to the referrer on submission 
+        <input type='hidden' name='redirect_to' value='https://www.dropbox.com/request/7lG33UjGl1Vb4fWtSqE9'/> -->
           <div class="row">
             <div class="form-group form-group-lg">
               <label for="FullName" class="col-sm-3 control-label">
@@ -64,7 +64,6 @@ fa-icon: check-square-o
   </form>
   </div>
 
-
   <div class="col-md-6 hidden-xs">
     <div class="help-holder pos-main-help"> 
       <table>
@@ -109,8 +108,13 @@ fa-icon: check-square-o
           </tr>
       </table>
     </div> 
-    
   </div>
-
+ 
+  <a href="//:0"  onclick="formSub()">Print</a>
 </div>
 
+<script>
+function formSub() {
+    window.open("/thank.html", "_blank","scrollbars=yes,resizable=yes,top=180,left=200,width=600,height=600");
+}
+</script>
