--- a/_posts/2000-01-06-updating.md
+++ b/_posts/2000-01-06-updating.md
@@ -6,16 +6,32 @@ fa-icon: cloud-upload
 ---
 
 <div class="container">
-  
+
   <div class="row">
     <div class="col-md-6">
-    
-      
+      <table style="width:100%">
+          <tr class="phone-group">
+            <th rowspan="3"><span class="phone-no">+977 9808233701</span></th>
+            <td><img class="img-margin" src="/img/whatsapp.png" alt="Smiley face" height="120" width="120"> </td>
+          </tr>
+
+          <tr class="phone-group">
+            <td><img class="img-margin" src="/img/viber.png" alt="Smiley face" height="120" width="120"></td>
+          </tr>
+
+          <tr class="phone-group">
+            <td><img class="img-margin" src="/img/call.png" alt="Smiley face" height="120" width="120"></td>
+          </tr>
+
+          <tr class="email-group">
+            <th><span class="contact-email">nep3dprint@gmail.com</span></th>
+            <td><img class="img-margin" src="/img/gmail.png" alt="Smiley face" height="120" width="120"></td>
+          </tr>
+      </table>
   </div>
 
 
-  <div class="col-md-6 hidden-xs">
-    
+  <div class="col-md-6">
     <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
         <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
        <input type='hidden' name='redirect_to' value='#'/>
