socia media icon added

--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -4,11 +4,10 @@ bg: blue
 color: white
 fa-icon: check-square-o
 ---
-
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <form action="/" class="form-horizontal" id="file-submit">
+      <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal" id="file-submit">
         <!-- the redirect_to is optional, the form will redirect to the referrer on submission 
         <input type='hidden' name='redirect_to' value='https://www.dropbox.com/request/7lG33UjGl1Vb4fWtSqE9'/> -->
           <div class="row">
@@ -58,6 +57,7 @@ fa-icon: check-square-o
         <li>Step 4: You'll be contacted shortly with model details and pricing.</li>
       </ul>
     </div>
+
   </form>
   </div>
 
@@ -84,7 +84,7 @@ fa-icon: check-square-o
   </div>
 
   <!-- Repeat of above code except modification of css of help section to fit for smaller screen -->
-
+  
   <div class="col-md-6 visible-xs">
     <div class="help-holder pos-main-help-small "> 
       <table>
@@ -110,24 +110,18 @@ fa-icon: check-square-o
   <a href="//:0"  onclick="formSub()">Print</a>
 </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
-
 <script>
-   $.validate({
-    form: '#file-submit'
-    },
-     onSuccess : function($form) {
-        //formSub();
-      alert('check');
-      return False; // Will stop the submission of the form
+  $.validate({
+    form : "#file-submit",
+    onSuccess : function($form) {
+        formSub();
+      return True; // 
     }
   });
 
-  function formSub() {
-      window.open("/thank.html", "MsgWindow", "scrollbars=yes,resizable=yes,top=180,left=200,width=600,height=600");
+   function formSub() {
+      window.open("/toupload.html", "MsgWindow", "scrollbars=yes,resizable=yes,top=180,left=200,width=600,height=600");
   }
-
 </script>
 
 
