--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -6,14 +6,26 @@ fa-icon: toggle-on
 ---
 
 <style>
-  
 
 </style>
 
 <div>
-	<p> Looking for free 3d printer files?  There are thousand of free 3d printer files availiable right now. 
-
-	We've listed some top website to look for. </p>
-
+	<p> Looking for free 3d printer files to print?  There are thousand of free 3d printer files availiable right now. 
+	
+	We've listed some best website to look for 3d models.</p>
+	<ul>
+		<li><a href="https://www.thingiverse.com/"> Thingiverse</a></li>
+		<li><a href="https://www.yeggi.com/"> Yeggi</a></li>
+		<li><a href="https://pinshape.com/"> Pinshape</a></li>
+		<li><a href="https://grabcad.com/">Grabcad </a></li>
+		<li><a href="https://www.myminifactory.com/">Myminifactory </a></li>
+		<li><a href="https://www.youmagine.com/">Youmagine</a></li>
+		<li><a href="https://www.cults.com/"> </a>Cults</li>
+		<li><a href="http://www.instructables.com/">instructables</a></li>
+		<li><a href="http://www.3dshook.com/"> </a>3Dshook</li>
+		<li><a href="http://www.3dagogo.com/">3Dagogo</a></li>
+		<li><a href="https://www.cgtrader.com">Cgtrader</a></li>
+		<li><a href="https://www.Google.com">Google</a></li>
+	</ul>
 </div>
 
