--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -5,33 +5,30 @@ color: white
 fa-icon: plug
 ---
 
-
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
+      <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal" id="send-link-form">
         <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-        <input type='hidden' name='redirect_to' value='https://www.dropbox.com/request/7lG33UjGl1Vb4fWtSqE9'/>
         <div class="row">
             <div class="form-group form-group-lg">
               <label for="FullName" class="col-sm-3 control-label check">
               <span class="cus-font">Paste Link</span></label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" id="FullName" placeholder="Valid link" name="Link:">
-                  <span class="help-text">Paste the valid link
+                  <input type="text" class="form-control" id="FullName" name="Link:" data-validation="url" >
+                  <span class="help-text">Paste valid link. e.g http://www.thingiverse.com/thing:1294453
                   </span>
                 </div>
             </div>
           </div>
-	
 
           <div class="row">
             <div class="form-group form-group-lg">
-              <label for="FullName" class="col-sm-3 control-label check">
+              <label for="FullNameLink" class="col-sm-3 control-label check">
               <span class="cus-font">Full Name</span></label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" id="FullName" placeholder="Your Name" name="FullName:">
-                  <span class="help-text">Your full name
+                  <input type="text" class="form-control" id="FullName" name="LinkFullName:"  data-validation="length custom" data-validation-length="min4" data-validation-regexp="^([A-Za-z ]+)$">
+                  <span class="help-text">Your full name: First Name and Lastname
                   </span>
                 </div>
             </div>
@@ -41,7 +38,7 @@ fa-icon: plug
        <div class="form-group form-group-lg">
         <label for="MobileNo" class="col-sm-3 control-label"> Mobile No</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" id="MobileNo" placeholder="98" name="Mobile:">
+          <input type="text" class="form-control" id="link-mobile" name="LinkMobile:" data-validation="length custom" data-validation-length="min6" data-validation-regexp="^([0-9 \-+()]+)$">
           <span class="help-text">Your valid mobile number. e.g. 9808233701</span>
         </div>
       </div>
@@ -51,12 +48,11 @@ fa-icon: plug
        <div class="form-group form-group-lg">
         <label for="MobileNo" class="col-sm-3 control-label">Email</label>
         <div class="col-sm-9">
-          <input type="emaild" class="form-control" id="MobileNo" placeholder="98" name="Email:">
+          <input type="email" class="form-control" id="link-email" name="Email:" data-validation="email">
           <span class="help-text">Your email address. e.g. nep3dprint@gmail.com</span>
         </div>
       </div>
     </div>
-
 
     <div class="row">
        <div class="form-group">
@@ -69,3 +65,15 @@ fa-icon: plug
   </div>
 </div>
 </div>
+
+<script>
+  $.validate({
+      form : "#send-link-form",
+      onSuccess: function($form) {
+          formSendLink();
+      }
+  });
+   function formSendLink() {
+      window.open("/sendlink.html", "MsgWindow", "scrollbars=yes,resizable=yes,top=180,left=200,width=600,height=600");
+  }
+</script>
