--- a/_posts/2000-01-06-updating.md
+++ b/_posts/2000-01-06-updating.md
@@ -32,16 +32,13 @@ fa-icon: cloud-upload
 
 
   <div class="col-md-6">
-    <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal">
-        <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-       <input type='hidden' name='redirect_to' value='#'/>
-
+    <form action="https://getsimpleform.com/messages?form_api_token=f21c9f6d668564eb6d853a65cf8c1e77" method="post" class="form-horizontal" id="contact-form">
         <div class="row">
         <div class="form-group form-group-lg">
           <label for="FullName" class="col-sm-3 control-label">
           <span class="cus-font">Message:</span></label>
             <div class="col-sm-9">
-              <textarea class="form-control" rows="5" id="MessageDet" name="Message:"></textarea>
+              <textarea class="form-control" rows="5" id="contact-msg" name="ContactMessage:" data-validation="length" data-validation-length="min4"></textarea>
               <span class="help-text">
               </span>
             </div>
@@ -53,8 +50,8 @@ fa-icon: cloud-upload
           <label for="FullName" class="col-sm-3 control-label">
           <span class="cus-font">Full Name</span></label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="UserFullName" name="FullName:">
-              <span class="help-text">Your full name
+              <input type="text" class="form-control" id="contact-fname" name="ContactFullName:" data-validation="length custom" data-validation-length="min4" data-validation-regexp="^([A-Za-z ]+)$">
+              <span class="help-text">
               </span>
             </div>
         </div>
@@ -64,8 +61,8 @@ fa-icon: cloud-upload
        <div class="form-group form-group-lg">
         <label for="MobileNo" class="col-sm-3 control-label"> Mobile No</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" id="MobileNo" name="Mobile:">
-          <span class="help-text">Your valid mobile number</span>
+          <input type="text" class="form-control" id="contact-mob" name="ContactMobile:" data-validation="length custom" data-validation-length="min6" data-validation-regexp="^([0-9 \-+()]+)$">
+          <span class="help-text">Your valid mobile number. e.g. 9808233701</span>
         </div>
       </div>
     </div>
@@ -74,7 +71,7 @@ fa-icon: cloud-upload
        <div class="form-group form-group-lg">
         <label for="Email" class="col-sm-3 control-label"> Email</label>
         <div class="col-sm-9">
-          <input type="email" class="form-control" id="UserEmail" name="Email:">
+          <input type="email" class="form-control" id="contact-em" name="ContactEmail:" data-validation="email">
           <span class="help-text">Your email address. e.g. nep3dprint@gmail.com</span>
         </div>
       </div>
@@ -90,6 +87,17 @@ fa-icon: cloud-upload
    
   </form>
   </div>
-
 </div>
+
+<script>
+  $.validate({
+      form : "#contact-form",
+       onSuccess: function($form) {
+          formContactLink();
+      }
+  });
+  function formContactLink() {
+    window.open("/sendcontact.html", "MsgWindow", "scrollbars=yes,resizable=yes,top=180,left=200,width=600,height=600");
+  }
+</script>
 
