--- a/_posts/2000-01-06-Contact.md
+++ b/_posts/2000-01-06-Contact.md
@@ -1,17 +1,16 @@
 ---
 title: "Contact"
-bg: purple
+bg: black 
 color: white
-fa-icon: cloud-upload
+fa-icon: phone
 ---
 
 <div class="container">
-
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-sm-6">
       <table style="width:100%">
           <tr class="phone-group">
-            <th rowspan="3"><span class="phone-no">+977 9808233701</span></th>
+            <th rowspan="3"><span class="phone-no">9808233701</span></th>
             <td><img class="img-margin" src="/img/whatsapp.png" alt="Smiley face" height="120" width="120"> </td>
           </tr>
 
