--- a/_posts/2000-01-07-Address.md
+++ b/_posts/2000-01-07-Address.md
@@ -1,8 +1,8 @@
 ---
 title: "Address"
-bg: turquoise
-color: white
-fa-icon: paint-brush
+bg: goldenyellow
+color: black
+fa-icon: location-arrow
 ---
 <div class="container">
 	<div class="row">
