--- a/_posts/2000-01-07-Address.md
+++ b/_posts/2000-01-07-Address.md
@@ -4,6 +4,14 @@ bg: goldenyellow
 color: black
 fa-icon: location-arrow
 ---
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+  	
+  </script>
+
+
 <div class="container">
 	<div class="row">
 		<div class="col-sm-offset-4 col-sm-4">
@@ -18,3 +26,4 @@ fa-icon: location-arrow
 		</div>
 	</div>
 </div>
+
