boostrap modal fixed

--- a/_posts/2000-01-05-SendLink.md
+++ b/_posts/2000-01-05-SendLink.md
@@ -67,13 +67,27 @@ fa-icon: link
 </div>
 
 <script>
-  $.validate({
-      form : "#send-link-form",
-      onSuccess: function($form) {
-          formSendLink();
-      }
+$.validate({
+  form : "#send-link-form",
+  onSuccess : function($form) {
+    //$('#proceed-modal').trigger('click');
+  if ($modal_status) {
+     $modal_status=false;
+     return true;
+     //stop form from submit
+    } else {
+      $('#proceed-modal').trigger('click');
+      return false;
+   } 
+ }
+});
+
+$( function () {
+  $modal_status=false;
+  $('#to_upload').click( function () {
+    $modal_status = true;
+    $('.close').trigger('click');
+    $('#proceed').trigger('click')
   });
-   function formSendLink() {
-      window.open("/sendlink.html", "MsgWindow", "scrollbars=yes,resizable=yes,top=180,left=200,width=600,height=600");
-  }
+});
 </script>
