--- a/_posts/2000-01-05-SendLink.md
+++ b/_posts/2000-01-05-SendLink.md
@@ -57,7 +57,7 @@ fa-icon: link
     <div class="row">
        <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9">
-          <button type="submit" class="btn btn-lg btn-log">Send</button>
+          <button type="submit" class="btn btn-lg btn-log" id="send-submit">Send</button>
         </div>
       </div>
     </div>
@@ -66,28 +66,15 @@ fa-icon: link
 </div>
 </div>
 
-<script>
-$.validate({
-  form : "#send-link-form",
-  onSuccess : function($form) {
-    //$('#proceed-modal').trigger('click');
-  if ($modal_status) {
-     $modal_status=false;
-     return true;
-     //stop form from submit
-    } else {
-      $('#proceed-modal').trigger('click');
-      return false;
-   } 
- }
-});
+{% include msgmodal.html 
+        openmodelid="'link-modal'" 
+        targetid="'#link-model'"  
+        modalid="'link-model'" 
+        msg="Please press send to us the link. Once we analyzed and verified your 3d model, we'll contact you ASAP with more details along with price." 
+        modal_body_btn="'send'"
+        btn_name="Send"
+        %}
 
-$( function () {
-  $modal_status=false;
-  $('#to_upload').click( function () {
-    $modal_status = true;
-    $('.close').trigger('click');
-    $('#proceed').trigger('click')
-  });
-});
+<script>
+fileSubmit("#send-link-form", "#link-modal", "#send","#send-submit");
 </script>
